--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
     height: 600px;
 }
 .contenido-header2{
-    margin-top: 10%;
+    margin-top: 20%;
     height: 200px;
 } 
 .seccion-header3{
@@ -24,13 +24,17 @@
 
 }
 .contenido-header3{
-    margin-top: 10%;
+    margin-top: 20%;
     height: 300px;
 }
 
 .seccion-header4{
     background-color: white;
     width: 100%;
-    height: 600px; 
+    height: 150px; 
 
+}
+.contenido-header4{
+    margin-top: 20%;
+    height: 100px;
 }
