--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 .seccion-header{
-    background-color: blue;
-    width: 100%;
+    background-image: url("blusky.png");
     height: 800px;
 }
 .contenido-header{
@@ -25,16 +24,20 @@
 }
 .contenido-header3{
     margin-top: 20%;
-    height: 300px;
+    height: 100px;
 }
 
 .seccion-header4{
-    background-color: white;
+    background-color: coral;
     width: 100%;
     height: 150px; 
 
 }
 .contenido-header4{
-    margin-top: 20%;
-    height: 100px;
+    margin-top: 10%;
+    height: 50px;
+}
+
+.navbar{
+    font-size: 1.5rem !important;
 }
