--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@
 } 
 .seccion-header3{
     background-color: whitesmoke;
-    width: 800%;
+    width: 100%;
     height: 500px;
 
 }
@@ -38,14 +38,21 @@
 .seccion-header4{
     background-color:cornflowerblue;
     width: 100%;
-    height: 400px; 
+    height: 600px; 
 
 }
 .contenido-header4{
-    margin-top: 20%;
-    height: 60px;
+    margin-top: 10%;
 }
 .navbar{
     font-size: 1.5rem !important;
 }
-
+.imagen-side{
+    width:50px;
+}
+.imagen-side2{
+    width: 50px;
+}
+.imagen-side3{
+    width: 50px
+}
