--- a/css/style.css
+++ b/css/style.css
@@ -48,11 +48,25 @@
     font-size: 1.5rem !important;
 }
 .imagen-side{
-    width:50px;
+    width:10px;
 }
 .imagen-side2{
-    width: 50px;
+    width: 10px;
 }
 .imagen-side3{
-    width: 50px
+    width: 60px;
+}
+footer{
+    width: 100%;
+    height: 250px;
+}
+i{
+    font-size: 60px;
+}
+i.fa-whatsapp{
+    color: green;
+}
+.titulo-footer{
+    margin-bottom: 40px;
+    padding-top: 25px;
 }
