--- a/css/style.css
+++ b/css/style.css
@@ -4,28 +4,25 @@
    
     width: 100%;
     height: 720px;
-    background-repeat: no-repeat;
-    background-position: center; /* Center the image */
-    background-size: cover;
 }
 .contenido-header{
-    margin-top: 5%;
+    margin-top: 25%;
     height: 200px;
 
 }
 .seccion-header2{
-   
+   background-color: brown;
     width: 100%;
-    height: 720px;
+    height: 800px;
 }
 .contenido-header2{
     margin-top: 20%;
     height: 200px;
 } 
 .seccion-header3{
-    background-color: whitesmoke;
-    width: 900%;
-    height: 900px;
+    background-color: brown;
+    padding-top: 200px;
+    height: 800px;
 
 }
 .contenido-header3{
@@ -55,7 +52,8 @@
 }
 footer{
     width: 100%;
-    height: 100px;
+    height: 150px;
+    padding-top: 30px;
 }
 i{
     font-size: 60px;
@@ -73,7 +71,7 @@ i.fa-whatsapp{
 }
 
 #marca{
-    font-size:20px;
+    font-size:50px;
 }
 
 #slogan{
@@ -81,10 +79,14 @@ i.fa-whatsapp{
 }
 
 #producto{
-    padding-top: 80px;
+    padding-top: 160px;
 }
 
 .logo-cecina{
-    width: 1500px;
-    height: auto;
+    width: 100%;
+    height:auto;
+}
+
+.about{
+    background-color: white;
 }
